2002-10-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Use uniform ly: prefix for exported scheme primitive functions.

	* scm/music-types.scm: junk compat glue

	* scripts/convert-ly.py: add rules for stuff below, junk
	compatibility glue for spanrequest.

	* lily/parser.yy (verbose_event): remove \spanrequest,
	\commandspanrequest, \script. 
	
	* lily/identifier-smob.cc (LY_DEFINE): change name to ly-export

	* lily/parser.yy: remove arpeggio keyword; use identifier. Idem
	for \penalty, \glissando.

2002-10-13  Rune Zedeler  <rune@zedeler.dk>

	* lily/accidental-engraver.cc: Fix
	grace-in-the-beginning-of-measure bug caused by the resent
	partial-measure fix.

	* lily/stem.cc: reversed noteheads overlap half of the stem. (Full
	overlap looks too crowded)
	
2002-10-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (assignment): allow SCM expression as assignment.

	* lily/include/music-output-def.hh (class Music_output_def):
	* lily/music-output-def.cc: 
	* lily/paper-def.cc: 
	* scm/font.scm (markup-to-properties):
	* lily/parser.yy (music_output_def_body): 
	remove style_sheet_

2002-10-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/grace-init.ly (startGraceMusic): shorten default grace stem
	length.

	* input/regression/spacing-to-grace.ly: new file.

	* input/regression/spacing-end-of-line.ly: new file.

	* lily/note-spacing.cc (get_spacing): take into account breakable
	stuff sticking out at the left (time sig change at line break).

	* lily/spacing-spanner.cc (breakable_column_spacing): junk weird
	raggedright code.

	* scm/music-functions.scm (make-voice-props-set): add
	staff-position for mm rests.
 
	* lily/spacing-spanner.cc (musical_column_spacing): shrink space
	before grace notes a little.

	* lily/parser.yy (sup_quotes): use '\'' for sup_quotes.

	* lily/break-align-interface.cc (do_alignment): right-edge spacing
	key adds space at the end of line. 

2002-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: Fix beams.
