@@ -725,7 +725,7 @@ fonts. Refer to the Xdvi documentation for more information.
 To use point-and-click, add one of these lines to the top of your .ly
 file.
 @example
-#(set-point-and-click! 'line)
+#(ly:set-point-and-click 'line)
 @end example
 @cindex line-location
 
@@ -765,7 +765,7 @@ apply @file{server.el.patch} (version 21.2 and earlier).  At the top
 of the @code{ly} file, replace the @code{set!} line with the following
 line,
 @example
-#(set-point-and-click! 'line-column)
+#(ly:set-point-and-click 'line-column)
 @end example
 @cindex line-colomn-location
 and set @code{XEDITOR} to @code{emacsclient --no-wait +%l:%c %f}.
