@@ -33,11 +33,14 @@
 #include "ly-modules.hh"
 
 
-LY_DEFINE(ly_set_point_and_click_x, "ly:set-point-and-click!", 1, 0, 0,
+/*
+  no ! suffix since it doesn't modify 1st argument.
+ */
+LY_DEFINE(ly_set_point_and_click_x, "ly:set-point-and-click", 1, 0, 0,
 	  (SCM what),
-	  "Set the options for Point-and-click source specials output. The
-argument is a symbol.  Possible options are @code{none} (no source specials),
-@code{line} and @code{line-column}")
+	  "Set the options for Point-and-click source specials output. The\n"
+"argument is a symbol.  Possible options are @code{none} (no source specials),\n"
+"@code{line} and @code{line-column}")
 {
   /*
     UGH.
