@@ -3,7 +3,7 @@
 #(define-public point-and-click #f)
 #(define-public midi-debug #f)
 
-\version "1.5.68"
+\version "1.7.3"
 
 \include "declarations-init.ly"
 
