@@ -2,6 +2,5 @@
 \midi {
         \tempo 4=60
 	\include "performer-init.ly"
-%	unfold_all = "1"
 }
 
